@@ -4,7 +4,6 @@ import org.jsoup.helper.ChangeNotifyingArrayList;
 import org.jsoup.helper.StringUtil;
 import org.jsoup.helper.Validate;
 import org.jsoup.parser.ParseSettings;
-import org.jsoup.parser.Parser;
 import org.jsoup.parser.Tag;
 import org.jsoup.select.Collector;
 import org.jsoup.select.Elements;
@@ -141,7 +140,7 @@ public class Element extends Node {
      */
     public Element tagName(String tagName) {
         Validate.notEmpty(tagName, "Tag name must not be empty.");
-        tag = Tag.valueOf(tagName, ParseSettings.preserveCase); // preserve the requested tag case
+        tag = Tag.valueOf(tagName, getParser().settings()); // maintains the case option of the original parse
         return this;
     }
 
@@ -483,7 +482,7 @@ public class Element extends Node {
      *  {@code parent.appendElement("h1").attr("id", "header").text("Welcome");}
      */
     public Element appendElement(String tagName) {
-        Element child = new Element(Tag.valueOf(tagName), baseUri());
+        Element child = new Element(Tag.valueOf(tagName, getParser().settings()), baseUri());
         appendChild(child);
         return child;
     }
@@ -496,7 +495,7 @@ public class Element extends Node {
      *  {@code parent.prependElement("h1").attr("id", "header").text("Welcome");}
      */
     public Element prependElement(String tagName) {
-        Element child = new Element(Tag.valueOf(tagName), baseUri());
+        Element child = new Element(Tag.valueOf(tagName, getParser().settings()), baseUri());
         prependChild(child);
         return child;
     }
@@ -535,8 +534,7 @@ public class Element extends Node {
      */
     public Element append(String html) {
         Validate.notNull(html);
-
-        List<Node> nodes = Parser.parseFragment(html, this, baseUri());
+        List<Node> nodes = getParser().parseFragmentInput(html, this, baseUri());
         addChildren(nodes.toArray(new Node[nodes.size()]));
         return this;
     }
@@ -549,8 +547,7 @@ public class Element extends Node {
      */
     public Element prepend(String html) {
         Validate.notNull(html);
-        
-        List<Node> nodes = Parser.parseFragment(html, this, baseUri());
+        List<Node> nodes = getParser().parseFragmentInput(html, this, baseUri());
         addChildren(0, nodes.toArray(new Node[nodes.size()]));
         return this;
     }
