@@ -4,47 +4,51 @@ import org.jsoup.helper.Validate;
 import org.jsoup.nodes.Attributes;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
+import org.jsoup.nodes.Node;
 
 import java.io.Reader;
 import java.util.ArrayList;
+import java.util.List;
 
 /**
  * @author Jonathan Hedley
  */
 abstract class TreeBuilder {
+    protected Parser parser;
     CharacterReader reader;
     Tokeniser tokeniser;
     protected Document doc; // current doc we are building into
     protected ArrayList<Element> stack; // the stack of open elements
     protected String baseUri; // current base uri, for creating new elements
     protected Token currentToken; // currentToken is used only for error tracking.
-    protected ParseErrorList errors; // null when not tracking errors
     protected ParseSettings settings;
 
     private Token.StartTag start = new Token.StartTag(); // start tag to process
     private Token.EndTag end  = new Token.EndTag();
-
     abstract ParseSettings defaultSettings();
 
-    protected void initialiseParse(Reader input, String baseUri, ParseErrorList errors, ParseSettings settings) {
+    protected void initialiseParse(Reader input, String baseUri, Parser parser) {
         Validate.notNull(input, "String input must not be null");
         Validate.notNull(baseUri, "BaseURI must not be null");
 
         doc = new Document(baseUri);
-        this.settings = settings;
+        doc.parser(parser);
+        this.parser = parser;
+        settings = parser.settings();
         reader = new CharacterReader(input);
-        this.errors = errors;
         currentToken = null;
-        tokeniser = new Tokeniser(reader, errors);
+        tokeniser = new Tokeniser(reader, parser.getErrors());
         stack = new ArrayList<>(32);
         this.baseUri = baseUri;
     }
 
-    Document parse(Reader input, String baseUri, ParseErrorList errors, ParseSettings settings) {
-        initialiseParse(input, baseUri, errors, settings);
+    Document parse(Reader input, String baseUri, Parser parser) {
+        initialiseParse(input, baseUri, parser);
         runParser();
         return doc;
     }
+
+    abstract List<Node> parseFragment(String inputFragment, Element context, String baseUri, Parser parser);
 
     protected void runParser() {
         while (true) {
